# SpaceShooter

./: .gitignore  CMakeLists.txt
src/: asset_store.cpp  asset_store.h  environment.cpp  environment.h  game.cpp  game.h  main.cpp  mixer.cpp  mixer.h  player.cpp  player.h  scene.h  scene_main.cpp  scene_main.h  texture.cpp  texture.h
